cmake_minimum_required(VERSION 3.19)
project(2021)

set(CMAKE_CXX_STANDARD 20)

add_executable(2021 main.cpp)
add_executable(2021_1 6.18.cpp)
add_executable(2021_2 Function.cpp)
add_executable(2021_shutdown shutdown.cpp)
add_executable(2021_Fouction Fouction2.cpp)
add_executable(2021_test 7.4.cpp)
add_executable(2021_7.9 test.cpp)
add_executable(math math.cpp)